My first HNG project

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
           />
         </div>
         <article>
-          <p data-testid="slackDisplayName" class="bold">Slack Name: <span>Ajay</span></p>
+          <p data-testid="slackDisplayName" class="bold">
+            Slack Name: <span>Ajay</span>
+          </p>
+
           <p data-testid="slackEmail" class="bold">
             Slack Email: <span>Ajayholuwaseun@gmail.com</span>
           </p>
@@ -42,8 +45,8 @@
           <li>I want to build a lot of projects that will go live.</li>
           <li>I also want to help junior developers who will be emerging.</li>
           <li>
-            I want to utilize my skills to work for local companies
-            or international companies.
+            I want to utilize my skills to work for local companies or
+            international companies.
           </li>
         </ul>
       </div>
